[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Formation.gd" type="Script" id=2]

[node name="Formation" type="Node2D"]
script = ExtResource( 2 )

[node name="Enemy" parent="." instance=ExtResource( 1 )]

[node name="Enemy2" parent="." instance=ExtResource( 1 )]
position = Vector2( 176, -104 )

[node name="Enemy3" parent="." instance=ExtResource( 1 )]
position = Vector2( -176, -104 )
[connection signal="was_defeated" from="Enemy" to="." method="_on_Enemy_was_defeated"]
[connection signal="was_defeated" from="Enemy2" to="." method="_on_Enemy2_was_defeated"]
[connection signal="was_defeated" from="Enemy3" to="." method="_on_Enemy3_was_defeated"]
